# gp

./: CMakeLists.txt
gp/: .CMakeLists.txt.swp  .gpConfig.cmake.in.swp  CMakeLists.txt  gpConfig.cmake.in  pyproject.toml  vcpkg.json
gp/src/: gp.cc  gp.hh
gp_py/: CMakeLists.txt  gp_py.cc  pyproject.toml
src/: gp.cc
